logIn and signUp processing

--- a/src/main/recources/messages.properties
+++ b/src/main/recources/messages.properties
@@ -1,3 +1,6 @@
 resetPassword.email.subject=Reset Password!
 resetPassword.button=Reset Password
 greeting=Hello
+
+loginForm.email.label=Email
+loginForm.password.label=Password
