--- a/src/main/recources/messages_ru.properties
+++ b/src/main/recources/messages_ru.properties
@@ -1,2 +1,5 @@
 resetPassword.button=Сбросить Пароль
 greeting=Здравствуйте
+
+loginForm.email.label=Адрес электронной почты
+loginForm.password.label=Пароль
