--- a/src/main/recources/messages.properties
+++ b/src/main/recources/messages.properties
@@ -1,6 +1,5 @@
 resetPassword.email.subject=Reset Password!
 resetPassword.button=Reset Password
 greeting=Hello
-
-loginForm.email.label=Email
-loginForm.password.label=Password
+loginForm.label.email=Email
+loginForm.label.password=Password
