--- a/src/main/recources/messages_ru.properties
+++ b/src/main/recources/messages_ru.properties
@@ -1,5 +1,25 @@
-resetPassword.button=Сбросить Пароль
-greeting=Здравствуйте
-
-loginForm.email.label=Адрес электронной почты
-loginForm.password.label=Пароль
+#todo: come up name conversion
+#todo: why does somebody encode properties for russian?
+loginForm.title=Авторизация
+loginForm.caption=Вход
+loginForm.label.email=Адрес эл. почты
+loginForm.placeholder.email=Адрес эл. почты
+loginForm.label.password=Пароль
+loginForm.placeholder.password=Пароль
+loginForm.link.forgotPassword=Забыли пароль?
+loginForm.button.login=Войти
+loginForm.button.signUp=Регистрация
+#Your Apple ID or password was incorrect.
+AbstractUserDetailsAuthenticationProvider.badCredentials=Неверный логин и/или пароль.
+registerForm.label.firstName=Имя
+registerForm.placeholder.firstName=Имя
+registerForm.label.lastName=Фамилия
+registerForm.placeholder.lastName=Фамилия
+registerForm.label.email=Адрес эл. почты
+registerForm.placeholder.email=Адрес эл. почты
+registerForm.label.password=Пароль
+registerForm.placeholder.password=Пароль
+registerForm.label.birthDay=День рождения
+registerForm.label.gender=Пол
+registerForm.label.gender.female=Женщина
+registerForm.label.gender.male=Мужчина
