initial commit under message module

--- a/src/main/recources/messages.properties
+++ b/src/main/recources/messages.properties
@@ -2,4 +2,5 @@ resetPassword.email.subject=Reset Password!
 resetPassword.button=Reset Password
 greeting=Hello
 loginForm.label.email=Email
-loginForm.label.password=Password
+loginForm.label.password=Passwordds\
+  fdsfds
